{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 73,
  "lineage": "dcf99ffe-1af7-aed1-6ad7-cbf69580a764",
  "resources": [
    {
      "module": "module.cloud_router",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-02T01:17:26.676-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/ai-companion-pso-hack/regions/europe-west4/routers/r-europe-west4",
            "name": "r-europe-west4",
            "network": "https://www.googleapis.com/compute/v1/projects/ai-companion-pso-hack/global/networks/ai-vpc",
            "project": "ai-companion-pso-hack",
            "region": "europe-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ai-companion-pso-hack/regions/europe-west4/routers/r-europe-west4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.project-services.data.google_compute_default_service_account.default",
            "module.project-services.google_project_iam_member.project_service_identity_roles",
            "module.project-services.google_project_service.project_services",
            "module.project-services.google_project_service_identity.project_service_identities",
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.cloud_router",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nats",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "nat-europe-west4",
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "ai-companion-pso-hack/europe-west4/r-europe-west4/nat-europe-west4",
            "log_config": [
              {
                "enable": true,
                "filter": "ALL"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-europe-west4",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "ai-companion-pso-hack",
            "region": "europe-west4",
            "router": "r-europe-west4",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.cloud_router.google_compute_router.router",
            "module.project-services.data.google_compute_default_service_account.default",
            "module.project-services.google_project_iam_member.project_service_identity_roles",
            "module.project-services.google_project_service.project_services",
            "module.project-services.google_project_service_identity.project_service_identities",
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.firewall_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules_ingress_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "ai-allow-icmp",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-07-02T02:03:29.962-07:00",
            "deny": [],
            "description": "Allow icmp anywhere",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ai-companion-pso-hack/global/firewalls/ai-allow-icmp",
            "log_config": [],
            "name": "ai-allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/ai-companion-pso-hack/global/networks/ai-vpc",
            "priority": 1000,
            "project": "ai-companion-pso-hack",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ai-companion-pso-hack/global/firewalls/ai-allow-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.project-services.data.google_compute_default_service_account.default",
            "module.project-services.google_project_iam_member.project_service_identity_roles",
            "module.project-services.google_project_service.project_services",
            "module.project-services.google_project_service_identity.project_service_identities",
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "ai-allow-internal",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-07-02T02:03:29.830-07:00",
            "deny": [],
            "description": "Allow internal traffic",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ai-companion-pso-hack/global/firewalls/ai-allow-internal",
            "log_config": [],
            "name": "ai-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/ai-companion-pso-hack/global/networks/ai-vpc",
            "priority": 1000,
            "project": "ai-companion-pso-hack",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ai-companion-pso-hack/global/firewalls/ai-allow-internal",
            "source_ranges": [
              "10.128.0.0/9"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.project-services.data.google_compute_default_service_account.default",
            "module.project-services.google_project_iam_member.project_service_identity_roles",
            "module.project-services.google_project_service.project_services",
            "module.project-services.google_project_service_identity.project_service_identities",
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "ai-allow-ssh",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-02T02:03:29.841-07:00",
            "deny": [],
            "description": "Allow ssh from anywhere",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ai-companion-pso-hack/global/firewalls/ai-allow-ssh",
            "log_config": [],
            "name": "ai-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/ai-companion-pso-hack/global/networks/ai-vpc",
            "priority": 1000,
            "project": "ai-companion-pso-hack",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ai-companion-pso-hack/global/firewalls/ai-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.project-services.data.google_compute_default_service_account.default",
            "module.project-services.google_project_iam_member.project_service_identity_roles",
            "module.project-services.google_project_service.project_services",
            "module.project-services.google_project_service_identity.project_service_identities",
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "egress-internet",
          "schema_version": 0,
          "attributes": {
            "as_paths": [],
            "creation_timestamp": "2025-07-02T01:18:12.961-07:00",
            "description": "route through IGW to access internet",
            "dest_range": "0.0.0.0/0",
            "id": "projects/ai-companion-pso-hack/global/routes/egress-internet",
            "name": "egress-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/ai-companion-pso-hack/global/networks/ai-vpc",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/ai-companion-pso-hack/global/gateways/default-internet-gateway",
            "next_hop_hub": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_inter_region_cost": "",
            "next_hop_ip": "",
            "next_hop_med": "",
            "next_hop_network": "",
            "next_hop_origin": "",
            "next_hop_peering": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "ai-companion-pso-hack",
            "route_status": "",
            "route_type": "",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ai-companion-pso-hack/global/routes/egress-internet",
            "tags": [],
            "timeouts": null,
            "warnings": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.project-services.data.google_compute_default_service_account.default",
            "module.project-services.google_project_iam_member.project_service_identity_roles",
            "module.project-services.google_project_service.project_services",
            "module.project-services.google_project_service_identity.project_service_identities",
            "module.vpc.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "europe-west4/ai-subnet",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-02T01:17:29.162-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.164.0.1",
            "id": "projects/ai-companion-pso-hack/regions/europe-west4/subnetworks/ai-subnet",
            "ip_cidr_range": "10.164.0.0/20",
            "name": "ai-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/ai-companion-pso-hack/global/networks/ai-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ai-companion-pso-hack",
            "purpose": "PRIVATE",
            "region": "europe-west4",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "192.168.64.0/24",
                "range_name": "ai-subnet-europe-west4-secondary-01"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ai-companion-pso-hack/regions/europe-west4/subnetworks/ai-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 1958190526637889014
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.project-services.data.google_compute_default_service_account.default",
            "module.project-services.google_project_iam_member.project_service_identity_roles",
            "module.project-services.google_project_service.project_services",
            "module.project-services.google_project_service_identity.project_service_identities",
            "module.vpc.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": true,
            "enable_ula_internal_ipv6": false,
            "id": "projects/ai-companion-pso-hack/global/networks/ai-vpc",
            "mtu": 0,
            "name": "ai-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "7419971033891427486",
            "numeric_id": "7419971033891427486",
            "project": "ai-companion-pso-hack",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ai-companion-pso-hack/global/networks/ai-vpc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.project-services.data.google_compute_default_service_account.default",
            "module.project-services.google_project_iam_member.project_service_identity_roles",
            "module.project-services.google_project_service.project_services",
            "module.project-services.google_project_service_identity.project_service_identities"
          ]
        }
      ]
    }
  ]
}